reworked turbinedata subscriber event
reworked de der subscriber events ift. at få turbine data, for den var lidt most, nu burde man gerne bare få det data man subber på og ikke få det samme data gentagende gange
